# OpenHydroQual

./: .gitignore  CMakeLists.txt  CustomPlotZoom.cpp  CustomPlotZoom.h  Dockerfile  Dockerizing_OHQuery_README.txt  GA_output.txt  ItemNavigator.cpp  ItemNavigator.h  ItemPropertiesWidget.cpp  ItemPropertiesWidget.h  LICENSE  LICENSE.md  OHQ.icns  OHQuery.pro  OpenHydroQual.pro  OpenHydroQual.sln  Options.ui  ProgressWindow.cpp  ProgressWindow.h  QAquifolium.pro  QAquifolium.sln  QAquifolium.vcxproj  QAquifolium.vcxproj.filters  QtGraphicView.pro  QtGraphicView.sln  QtGraphicView.vcxproj  QtGraphicView.vcxproj.filters  README.md  TimeSeriesTextBox.cpp  TimeSeriesTextBox.h  UnitTextBox.h  UnitTextBox3.cpp  UnitTextBox3.h  VisualizationDialog.cpp  VisualizationDialog.h  VisualizationGraphicsView.cpp  VisualizationGraphicsView.h  XString.cpp  XString.h  (+70 more)
.github/workflows/: openhydroqual-rt-web-ci.yml
AppImage/: AppImageBuilder.yml
Client/: Client.pro  apiclient.cpp  apiclient.h  mainwindow.cpp  mainwindow.h
Examples/Aquifer_Network/: DO_loading.txt  NOX_loading.txt  Wet_pond.scr
Examples/Bioretention/: Belts&Washairpot_Decm_2012.txt  Bioretention_Model.ohq  Bioretention_Model.scr  Hummid_2010_2012.csv  Solar_2010_2012.csv  Temp_2010_2012.csv  Wind_2010_2012.csv
Examples/Sewershed_Drywell/: LAX_Humidity.csv  LAX_Precipitation_NASA.csv  LAX_Temperature.csv  LAX_solar.csv  LAX_w_transport_home.ohq  LAX_wind.csv
Examples/Water_Network/: Pipe_aquifer_elastic_junction.ohq  Pumping_rate.txt  Recharge_rate.txt  Time_Variable_Water_Demand.txt
Examples/Wet_pond/: DOC_loading.txt  Humidity_wetland.csv  NH3_loading.txt  Solar_wetland.csv  Wet_pond.ohq  Wind_wetland.csv  errors.txt  inflow.txt
Icons/vectorstock_951513/: vectorstock_951513.ai  vectorstock_951513.eps
ModelWizard/: FilePushButton.cpp  FilePushButton.h  MajorBlock.cpp  MajorBlock.h  ModelWizard.cpp  ModelWizard.h  ModelWizard.pro  ModelWizard.ui  ModelWizard.vcxproj  ModelWizard.vcxproj.filters  SetValEntity.h  WizBlockArray.cpp  WizBlockArray.h  WizConnector.cpp  WizConnector.h  WizSingleBlock.cpp  Wizard_Argument.cpp  Wizard_Argument.h  Wizard_Entity.cpp  Wizard_Entity.h  Wizard_Script.cpp  Wizard_Script.h  Wizard_Script_Reader.cpp  Wizard_Script_Reader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  svgviewer.cpp  svgviewer.h  wiz_assigned_value.cpp  wiz_entity.cpp  wiz_entity.h  wiz_parameter.cpp  wiz_parameter.h  wiz_parameter_group.cpp  wizardcriteria.cpp  wizardcriteria.h  wizarddialog.cpp  wizarddialog.h  (+5 more)
OHQ-static/: OpenHydroQual-static.pro
OHQLib/: BUILD.md  CMakeLists.txt  OHQLib.pro  OHQLibTest.pro  README.md  main.cpp
OHQLibTest/: CMakeLists.txt
OHQ_Server_WSClient/: WSClient.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  wsclient.cpp
OHQuery_Client/: FilePushButton.cpp  ModelWizard.qrc  OHQuery_Client.pro  SetValEntity.cpp  SetValEntity.h  WizBlockArray.h  WizConnector.cpp  WizConnector.h  WizSingleBlock.h  Wizard_Argument.cpp  Wizard_Argument.h  Wizard_Entity.cpp  Wizard_Script.cpp  Wizard_Script.h  filechecker.cpp  filechecker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rosettafetcher.cpp  rosettafetcher.h  scalarloader.cpp  scalarloader.h  svgviewer.cpp  svgviewer.h  timeseriesloader.cpp  timeseriesloader.h  wiz_assigned_value.h  wiz_parameter_group.h  wizard_assigned_value.cpp  wizard_assigned_value.h  wizardcriteria.cpp  wizardcriteria.h  wizarddialog.cpp  wizarddialog.h  wizarddialog.ui  wizardparameter.cpp  wizardparameter.h  wizardparametergroup.h  (+2 more)
OHQuery_Client/HTML/: index.html
PythonBindings/: PythonBindings.pro  bindings.cpp  openhydroqual_python_api.html  test_ohq.py
QtAquifolium/: QtAquifolium.sln
QtAquifolium/QtAquifolium/: Props.props  QtAquifolium.cpp  QtAquifolium.h  QtAquifolium.qrc  QtAquifolium.ui  QtAquifolium.vcxproj  QtAquifolium.vcxproj.filters  cpp.hint  main.cpp
Setup/: QAquifolium.aip  QAquifolium.back.aip
WSClient/: mainwindow.cpp  mainwindow.h  wsclient.h
aquifolium/: Aquifolium.cbp  Aquifolium.cscope_file_list  CppCheckResults.xml  Demand.txt.txt  GA_info.txt  GA_out.txt  Model_diagram.odg  Obj.txt  cscope.out  detail_GA.txt  main.cpp  power_catchment.qnt  power_reservoirs.qnt  power_reservoirs_rules.qnt  power_reservoirs_rules_source.qnt  power_reservoirs_transport.qnt  script.txt  script_for_QAquifolium.txt  script_simple.txt  script_simple_catchment.txt  script_transport.txt  text.txt  version.h
aquifolium/Aquifolium/: Aquifolium.sln
aquifolium/doxygen/: doxyfile
aquifolium/include/: BTC.h  BTCSet.h  Block.h  Command.h  Condition.h  ErrorHandler.h  Expression.h  ExpressionNode.h  Link.h  (+41 more)
backup/: runtimewindow.ui
docs/: realtime-web-repo-bootstrap.md  realtime-web-repo-proposal.md
forms/: mainwindow.ui
include/: AquiGraphicsView.h  gitem.h  mainwindow.h  ray.h
resources/: Gate_control.json  Pond_Plugin.json  Pond_Plugin_Revised.json  Reservoir_operation.json  Sewer_system.json  Stormwater_control_measures.json  Upscaling.json  Well.json  buildup_washoff.json  default_templates.list  evapotranspiration_models.json  groundwater.json  main_components.json  mass_transfer.json  open_channel.json  open_channel_constituent.json  physicsbaseddatadrivenhydrology.json  pipe_pump_tank.json  plants.json  power_reservoirs.qnt  power_reservoirs_rules_source.json  power_reservoirs_rules_source.qnt  precipitation_forcast.json  rainfall_runoff.json  river_processes.json  settings.json  soil_evapotranspiration_models.json  soil_evapotranspiration_models_v2.json  systemsettings.json  test_expression.json  unconfined_groundwater.json  unsaturated_soil.json  unsaturated_soil_EC_logistic.json  unsaturated_soil_links_w_Ks.json  unsaturated_soil_old.json  unsaturated_soil_revised_model.json  urban_water_management.json  urban_water_management_old.json  wastewater.json
scripts/: create-openhydroqual-rt-web-repo.sh  export-openhydroqual-rt-web.sh
src/: AquiGraphicsView.cpp  gitem.cpp  mainwindow.cpp  ray.cpp
terminal/: AppImageBuilder.yml  Lib_Copy.sh  TOpenHydroQual.sln  moc_predefs.h
validation/: Validation.grf
(+1148 files in other folders)
